# edid-json-tools

./: .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  edid-schema.json  edid2json.py  edidparser  edidparser.py  json2edid.py  jsonedid  jsonedid_test_out.txt  jsonparser  options.py  requirements.txt  setup.cfg  test_edid  test_edid_normal.txt  test_edid_verbose.txt  testparser.sh
.reuse/: dep5
edid/: basic_display.py  chromaticity.py  coordinated_video_timings.py  data_block.py  descriptor.py  edid.py  error.py  error_check.py  established_timings.py  extensions.py  standard_timings.py  tools.py  video_block.py
edid_json_tools/: __init__.py  chromaticity.py  cli.py  coordinated_video_timings.py  data_block.py  descriptor.py  edid-schema.json  edid.py  edid2json.py  edidparser_argparse.py  edidparser_impl.py  error.py  error_check.py  established_timings.py  extensions.py  json2edid.py  options.py  standard_timings.py  tools.py  video_block.py
