# Copyright (c) 2019-2021 The EDID JSON Tools authors. All rights reserved.
#
# SPDX-License-Identifier: BSD-3-Clause

[metadata]
name = edid-json-tools
version = attr: edid_json_tools.VERSION
description = "Manipulate EDID data, and convert between binary EDID and a JSON representation"
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
url = https://github.com/rpavlik/edid-json-tools


[options]
packages = edid_json_tools

[options.extras_require]
CLI = click>=7,<8

[options.entry_points]
console_scripts =
    edidparser = edid_json_tools.edidparser_argparse:ParseEdid
    edid2json = edid_json_tools.cli:edid2json [CLI]
    json2edid = edid_json_tools.cli:json2edid [CLI]
